# ecom_research

./: .env.example  .gitignore  CLAUDE.md  config.json  config.py  pyproject.toml
docs/: gemini-pricing.md
prompts/: gemini_analyze.txt  gemini_media_analysis.py
samples/: analysis.txt  analysis_usage.json
tiktok/: analyze_video.py  download_media.py  pipeline.py  scrape_comments.py  scrape_post.py
